--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,10 @@
-.form-group{
+*{
+    padding:0;
+    margin:0;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.form-style{
     min-height: 91.2vh;
     display: flex;
     flex-direction: column;
@@ -6,6 +12,15 @@
     justify-content: center;
     
 }
+.App-header {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(7px + 2vmin);
+    color: #000;
+  }
 
 
 
