--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,6 +13,7 @@
     
 }
 .App-header {
+    background-color: #e6e6ff;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -21,6 +22,10 @@
     font-size: calc(7px + 2vmin);
     color: #000;
   }
+  .nav-background{
+      background-color: #00004d;
+  }
+
 
 
 
