Validation still to be completed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,8 +40,8 @@
       background-color: #08353b !important;
   }
 
-  td{
-      overflow: break-word !important;
+  p{
+      overflow-wrap: break-word !important;
   }
 
 
