--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,6 +27,16 @@
     color: #000;
     min-height: 84.5vh;
   }
+  .App-header-landing {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(7px + 2vmin);
+    color: #000;
+    min-height: 94.5vh;
+  }
 
   /* original green #08353b */
   .nav-background{
